--- a/animals.html
+++ b/animals.html
@@ -14,6 +14,33 @@
 
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="animals.html">Interesting Animals</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">     
+          <li class="nav-item">
+            <a class="nav-link active"  href="plane.html">plane page</a>
+          </li>        
+          <li class="nav-item">
+            <a class="nav-link" href="train.html">train page</a>
+            </li> 
+            <li class="nav-item dropdown">
+              <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                Drop down
+              </a>
+            
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="plane.html">plane page</a></li>
+                <li><a class="dropdown-item" href="train.html">train page</a></li>
+         </ul>
+        </div>
+      </div>
+   </nav>
+
 <h1>Animals by Shiva Kumar Amanchi</h1>
 <div>
 <div class="row">
@@ -123,5 +150,18 @@
   <button type="button" class="btn btn-danger">H</button>
   </div>
   </div>
+
+  <div class="dropdown">
+    <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+      Drop down
+    </a>
+  
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+      <li><a class="dropdown-item" href="plane.html">plane page</a></li>
+      <li><a class="dropdown-item" href="train.html">train page</a></li>
+    
+    </ul>
+    </div>
+    </div>
 </body>
 </html>
