--- a/animals.html
+++ b/animals.html
@@ -163,5 +163,27 @@
     </ul>
     </div>
     </div>
+    <br>
+    <br>
+
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="Animal" class="form-label">Enter the animal</label>
+        <input type="text" class="form-control" >
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" >
+        <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    
+    
+    </div>
 </body>
 </html>
