--- a/animals.html
+++ b/animals.html
@@ -182,8 +182,28 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    
-    
+    <div class="card" style="width: 18rem;">
+      <img src="images/Monkey.jpg" class="card-img-top" alt="Monkey image">
+      <div class="card-body">
+        <h5 class="card-title">Monkey</h5>
+        <p class="card-text">This is about History of Monkey.</p>
+        <a href="#" class="btn btn-primary">Go to Image</a>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img src="images/caiman.jpg" class="card-img-top" alt="Caiman image">
+        <div class="card-body">
+          <h5 class="card-title">Caiman</h5>
+          <p class="card-text">This is about History of Caiman.</p>
+          <a href="#" class="btn btn-primary">Go to Image</a>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <img src="images/Abyssinian.jpg" class="card-img-top" alt="Abyssinian image">
+          <div class="card-body">
+            <h5 class="card-title">Abyssinian</h5>
+            <p class="card-text">This is about History of Abyssinian.</p>
+            <a href="#" class="btn btn-primary">Go to Image</a>
+          </div>
+    </div>
     </div>
 </body>
 </html>
