--- a/animals.html
+++ b/animals.html
@@ -187,21 +187,21 @@
       <div class="card-body">
         <h5 class="card-title">Monkey</h5>
         <p class="card-text">This is about History of Monkey.</p>
-        <a href="#" class="btn btn-primary">Go to Image</a>
+        <a href="https://www.livescience.com/8843-asia-origin-proposed-humans-monkeys-apes.html" class="btn btn-primary">Go to Link</a>
       </div>
       <div class="card" style="width: 18rem;">
         <img src="images/caiman.jpg" class="card-img-top" alt="Caiman image">
         <div class="card-body">
           <h5 class="card-title">Caiman</h5>
           <p class="card-text">This is about History of Caiman.</p>
-          <a href="#" class="btn btn-primary">Go to Image</a>
+          <a href="https://en.wikipedia.org/wiki/Caiman" class="btn btn-primary">Go to Link</a>
         </div>
         <div class="card" style="width: 18rem;">
           <img src="images/Abyssinian.jpg" class="card-img-top" alt="Abyssinian image">
           <div class="card-body">
             <h5 class="card-title">Abyssinian</h5>
             <p class="card-text">This is about History of Abyssinian.</p>
-            <a href="#" class="btn btn-primary">Go to Image</a>
+            <a href="https://en.wikipedia.org/wiki/Abyssinian_cat" class="btn btn-primary">Go to Link</a>
           </div>
     </div>
     </div>
