--- a/animals.html
+++ b/animals.html
@@ -116,7 +116,7 @@
       <td>NEVS</td>
     </tr>
 
-    <tr class ="bg-warning text-white"></trclass>>
+    <tr class ="bg-warning text-white">
       <th scope="row">C</th>
       <td>Caiman</td>
       <td>Charlotte</td>
